# modified_alps

./: CMakeLists.txt  README.txt
applications/: CMakeLists.txt
applications/diag/: CMakeLists.txt  diag.h
applications/diag/fulldiag/: CMakeLists.txt  factory.C  factory.h  fulldiag.C  fulldiag.h  fulldiag_evaluate.C  measurementplots.h
applications/diag/fulldiagfqhe/: Makefile  fqheed.cpp  states_lll.c  states_lll_mz_minus_one.c  vector_of_primes.c
applications/diag/sparsediag/: CMakeLists.txt  factory.C  factory.h  sparsediag.C  sparsediag.h
applications/dmft/: CMakeLists.txt
applications/dmft/qmc/: CMakeLists.txt  alps_solver.C  auxiliaryfunctions.C  bandstructure.C  bandstructure.h  externalsolver.C  externalsolver.h  hilberttransformer.C  hilberttransformer.h  hirschfyeaux.h  hirschfyesim.C  hirschfyesim.h  main.C  selfconsistency.C  selfconsistency.h  solver_main.C
applications/dmrg/: CMakeLists.txt
applications/dmrg/dmrg/: CMakeLists.txt  dmrg.C  dmrg.h  factory.C  factory.h
applications/dmrg/mps/: ALPS_MPSConfig.cmake.in  CMakeLists.txt  Doxyfile.in  symmetries.cmake
applications/dmrg/tebd/: CMakeLists.txt  tebd.f90
applications/mc/: CMakeLists.txt
applications/mc/simple/: CMakeLists.txt  evaluator.C  evaluator.h  heisenberg.C  heisenberg.h  heisenberg.ip  heisenberg.op  ising.C  ising.h  ising.ip  ising.op  main.C  vtk.h  xy.C  xy.h  xy.ip  xy.op
applications/mc/spins/: CMakeLists.txt  abstract_fitter.C  abstractspinsim.h  base_incr_fitter.C  clusterupdate.h  connect.h  dummy_fitter.C  est_grad_fitter.C  factory.h  faststack.h  (+17 more)
applications/qmc/: CMakeLists.txt  qmc.h
config/: ALPSBuildname.cmake  ALPSChooseCompiler.cmake  ALPSConfig.cmake.in  ALPSCore.cmake  ALPSTesting.cmake  CMakeLists.txt  Distribution.xml.in  FindBoostForALPS.cmake  FindBoostSrc.cmake  FindDocbookDtd.cmake  FindDocbookXsl.cmake  FindFFTW.cmake  FindFop.cmake  FindHDF5.cmake  FindLPSolve.cmake  FindLapack.cmake  FindMPIForALPS.cmake  FindPyInstaller.cmake  FindPython.cmake  FindSQLite.cmake  FindSZIP.cmake  FindSphinx.cmake  FindVistrails.cmake  FindVistrailsGit.cmake  FindXsltproc.cmake  FindZLIB.cmake  GNUCompilers.cmake  MacPKG.cmake  UseALPS.cmake  UsePyInstaller.cmake  add_alps_test.cmake  brutus-intel12.cmake  brutus-mkl12.cmake  cray.cmake  include.mk.in  make_package.sh.in  monch-intel.cmake  passthru.py  preamble-light.in  preamble.in  (+6 more)
example/: CMakeLists.txt
example/alea/: CMakeLists.txt  example_autocorrelation.cpp  example_autocorrelation.py  example_error.cpp  example_error.py  example_mean.cpp  example_mean.py  example_running_mean.cpp  example_running_mean.py  example_variance.cpp  example_variance.py  testfile.h5
example/fortran/: CMakeLists.txt
example/hdf5/: CMakeLists.txt  enum_as_class.cpp  enum_vectorizable.cpp  pair_int_vectorizable.cpp
example/ietl/: CMakeLists.txt  arnoldi1.h  arnoldi1_complex.cpp  arnoldi1_real.cpp  jacobi.cpp  jacobidavidson1.cpp  jacobidavidson2.cpp  lanczos1.cpp  lanczos2.cpp  lanczos3.cpp  lanczos4.cpp  lanczos5.cpp  lanczos_checkpoint.cpp  lanczos_checkpoint_complex.cpp  lanczos_resume.cpp  lanczos_resume_complex.cpp  power1.cpp  power2.cpp  solver.h
example/model/: CMakeLists.txt  matrix.h  parm_numeric.in  parm_symbolic.in  print_numeric.cpp  print_numeric2.cpp  print_numeric3.cpp  print_symbolic.cpp  print_symbolic2.cpp  print_symbolic3.cpp
example/ngs/: CMakeLists.txt
example/parapack/: CMakeLists.txt
example/sampling/: CMakeLists.txt  fleas.h  fleas_correlated.C  fleas_direct.C  fleas_independent.C  fleas_simpleminded.C  fleas_uncorrelated.C
example/scheduler/: CMakeLists.txt  evaluate.C  evaluate2.C  ising.C  ising.h  ising2.C  ising2.h  main.C  main2.C  main3.C  parm  parm2  parm3
lib/pyalps/: CMakeLists.txt  __init__.py  alea.py  alea_detail.py  apptest.py  cxx.py  dataset.py  dict_intersect.py  dwa.py  fit_wrapper.py  floatwitherror.py  hdf5.py  lattice.py  load.py  math.py  maxent.py  mpi.py  mpl_setup_macosx.py  mpl_setup_qt.py  mpl_setup_tk.py  natural_sort.py  ngs.py  plot.py  plot_core.py  pytools.py  tools.py
tool/alea/: CMakeLists.txt  mcanalyze_tools.hpp  mcanalyze_tools.ipp  mcanalyze_tools.py  mean.cpp  mean.py  variance.cpp  variance.py
tutorials/: CMakeLists.txt  test_py.py  test_vt.py
tutorials/code-01-python/: ising-skeleton.py
tutorials/code-07-mcmain-mcbase/: export.py
tutorials/code-08-mcmain-python/: main.py
tutorials/code-09-mcmain-python-hybrid/: main.py
tutorials/dmft-03-interaction/: tutorial3eval.py
tutorials/dmrg-01-dmrg/: build_lattice.py  spin_one.py  spin_one_half.py  spin_one_half_multiple.py  spin_one_multiple.py
tutorials/dmrg-02-gaps/: spin_one_half_gap.py  spin_one_half_triplet.py
tutorials/dmrg-04-correlations/: spin_one.py  spin_one_half.py
tutorials/ed-01-sparsediag/: tutorial1a.py
tutorials/ed-05-nnn-chain/: nnn-crit-pt.py
tutorials/hybridization-02-kondo/: tutorial2.py
tutorials/hybridization-03-retarded-interaction/: tutorial3.py
tutorials/hybridization-04-spinfreezing/: tutorial4a.py  tutorial4b.py
tutorials/intro-01-basics/: tutorial-binder.py  tutorial-evaluate.py  tutorial-full.py  tutorial-gnuplot.py  tutorial-graceplot.py  tutorial-magnetization.py  tutorial-prepareinput.py  tutorial-runsimulation.py  tutorial-text.py
tutorials/mc-01b-equilibration-and-convergence/: tutorial1a.py
tutorials/mc-02-susceptibilities/: mc-02-susceptibilities.vt
tutorials/mc-04-measurements/: tutorial4.py
tutorials/mc-06-qwl/: tutorial6d.py
tutorials/mc-08-quantum-phase-transition/: tutorial8a.py
tutorials/mc-09-snapshot/: clean.sh  parm9a  parm9b  parm9c  parm9d  plot9a.py  plot9b.pvsm  plot9c.pvsm  plot9d.pvsm  run.sh
tutorials/mps-01-optim/: build_lattice.py  spin_one.py  spin_one_half.py  spin_one_half_multiple.py  spin_one_multiple.py
tutorials/mps-02-gaps/: spin_one_half_gap.py  spin_one_half_triplet.py
tutorials/mps-06-kink/: magnetization_movie.py
tutorials/mps-example-01-string-order/: mymodels.xml  parms.py
tutorials/mps-example-02-inhomogeneous/: parms.py
tutorials/mps-example-03-complex/: mymodels.xml  parms.py
(+1206 files in other folders)
